dependencies/gogs/gogs-svc.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: gogs
  name: gogs
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gogs
    name: gogs
  type: ClusterIP
