dependencies/gogs/gogs-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: gogs
  name: gogs
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: gogs
    weight: 100
